--- a/haikyuu-app/src/css/CharacterCard.css
+++ b/haikyuu-app/src/css/CharacterCard.css
@@ -7,24 +7,30 @@
     border-radius: 5%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.3);
     background-color: rgb(40, 40, 40);
+    scale: 1;
 }
 
-h3 {
+.character-card:hover {
+    scale: 1.03;
+    transition: scale 0.4s ease;
+}
+
+.character-card h3 {
     font-size: 22px;
     margin: 10px 0 0 0;
 }
 
-h2 {
+.character-card h2 {
     font-size: 29px;
     margin: -8px 0 0 0;
 }
 
-p {
+.character-card p {
     font-size: 18px;
     margin: 2px 0 0 0;
 }
 
-img {
+.character-card img {
     border-top-left-radius: 5%;
     border-top-right-radius: 5%;
 }
