--- a/haikyuu-app/src/css/NavBar.css
+++ b/haikyuu-app/src/css/NavBar.css
@@ -6,6 +6,9 @@
     background-color: rgb(24, 24, 24);
     margin-bottom: 20px;
     width: 100vw;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
 }
 
 .nav-bar-brand img {
