--- a/haikyuu-app/src/css/SearchBar.css
+++ b/haikyuu-app/src/css/SearchBar.css
@@ -1,6 +1,9 @@
 .search-bar-container {
     display: flex;
     justify-content: center;
+    position: sticky;
+    z-index: 999;
+    top: 120px;
 }
 
 .search-bar {
@@ -11,6 +14,7 @@
     gap: 10px;
     background-color: rgb(53, 53, 53);
     border-radius: 5px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
 }
 
 .search-bar input {
